# book-recommendation

./: .coverage  .gitignore  Dockerfile  Jenkinsfile  README.md  data.db  deployment.yaml  docker-compose.yaml  main.py  pyproject.toml  test1.py  test2.py  user_data.db
