[tool.poetry]
name = "book-recommendation"
version = "0.1.0"
description = ""
authors = ["I528580 <ali.abbas.zaidi@sap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
streamlit = "^1.35.0"
streamlit-auth0-component = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
